force-app/main/default/objects/Case/fields/Escalation_Status__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Status__c</fullName>
    <label>Escalation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>